<resources>
    <string name="app_name">SocialExchangeApp</string>
    <string name="share_link_button">Share</string>
    <string name="share_info_instructions">Select information to share:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_info_popup">Share the link or QR code:</string>
    <string name="add_contact">Add a contact:</string>
    <string name="contact_from_link">Enter link below</string>
    <string name="contact_or">-or-</string>
    <string name="contact_from_qr">Scan QR code</string>
    <string name="all_social">Select Social</string>
    <string name="all_prof">Select Professional</string>
    <string name="num_contacts_file">numcontacts</string>
    <string name="contacts_file">contacts</string>
    <string name="personal_profile_file">profile</string>
    <string name="phone">Phone</string>

</resources>