<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/contact_from_link" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/link_text"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_or"
            android:textSize="16pt"
            android:layout_marginVertical="80dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/contact_from_qr"
            android:id="@+id/scan_qr_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>